style: make the user login status bar shorter and resolve vertical alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,10 @@ header .nav-link, header .navbar-brand {
     text-align: center;
 }
 
+#login-status {
+    height: 28px;
+}
+
 /* Index styles */
 
 .main-text {
